--- a/package.json
+++ b/package.json
@@ -5,18 +5,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "dependencies": {
+    "@chakra-ui/icons": "^1.1.1",
+    "@chakra-ui/react": "^1.8.1",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "next": "12.0.9",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.16.12",
+    "@chakra-ui/storybook-addon": "^1.0.0",
+    "@storybook/addon-actions": "^6.4.16",
+    "@storybook/addon-essentials": "^6.4.16",
+    "@storybook/addon-links": "^6.4.16",
+    "@storybook/addon-storysource": "^6.4.16",
+    "@storybook/addon-viewport": "^6.4.16",
+    "@storybook/react": "^6.4.16",
     "@types/node": "17.0.13",
     "@types/react": "17.0.38",
+    "babel-loader": "^8.2.3",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.9",
+    "eslint-plugin-storybook": "^0.5.6",
     "typescript": "4.5.5"
   }
 }
